@@ -92,6 +92,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
 - F#                     Julien Ortin
 - FO (abas-ERP)          Tan-Vinh Nguyen
+- FormulaOne             Juro Bystricky
 - Fortran                Cedric Arrabie
 - FreeBasic              Roberto Rossi
 - GADV 4CS               Jason Curl
